<?xml version="1.0"?>
<package format="3">
  <name>simlab_msgs</name>
  <version>0.0.0</version>
  <description>Action interfaces for UVMS simlab.</description>
  <maintainer email="edmorgangh@gmail.com">mr-robot</maintainer>
  <license>AGPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
